--- a/app/assets/stylesheets/progress.scss
+++ b/app/assets/stylesheets/progress.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the progress controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@mixin centerer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
+.parent {
+    position: relative;
+}
+
+.child {
+    @include centerer;
+}
