--- a/app/views/gallery/commercial.html.erb
+++ b/app/views/gallery/commercial.html.erb
@@ -28,14 +28,14 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
+                    <%= link_to image_tag("cogallery/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover', :size => '700x300') %>
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Bamboo Pillow</h3>
-                <h4>Mall Kiosks</h4>
+                <h3>Mall Kiosks</h3>
+                <h4></h4>
                 <p></p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+                <a class="btn btn-primary" <%= link_to "View Project", gallery_mallkiosks_path%></i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -46,12 +46,12 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
+                    <%= link_to image_tag("cogallery/commercial(2).png", :class => 'img-responsive img-portfolio img-hover') %>
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Atlanta Braves</h3>
-                <h4>Restaurant & Bar</h4>
+                <h3>Restaurants</h3>
+                <h4></h4>
                 <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
@@ -68,50 +68,32 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Mac Lab</h3>
-                <h4>Bakery</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+                <h3>Retail Stores</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
         <!-- /.row -->
-
+        
         <hr>
-
-        <!-- Project Four -->
+        <!-- Project four -->
         <div class="row">
-
             <div class="col-md-7">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Gallery Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
+                <h3>Salons</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
         <!-- /.row -->
 
         <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Gallery Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="#">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
 
         <hr>
 
