--- a/app/views/gallery/kitchens.html.erb
+++ b/app/views/gallery/kitchens.html.erb
@@ -45,28 +45,28 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(1).png") %>
+                            <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(1).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(2).png") %>
+                            <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(2).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(3).png") %>
+                            <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(3).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(4).png") %>
+                            <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(4).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/rkitchen(1).png") %>
+                            <%= image_tag("rgallery/kitchens/rkitchen(1).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/rkitchen(2).png") %>
+                            <%= image_tag("rgallery/kitchens/rkitchen(2).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/rkitchen(3).png") %>
+                            <%= image_tag("rgallery/kitchens/rkitchen(3).png") %>
                         </div>
                         <div class="item">
-                            <%= link_to image_tag("rgallery/kitchens/rkitchen(4).png") %>
+                            <%= image_tag("rgallery/kitchens/rkitchen(4).png") %>
                         </div>
                     </div>
 
@@ -87,54 +87,15 @@
                 
                 
                 <!-- Projects Row Ulhmann-->
-        <div class="row">
-            <div class="col-md-3 img-portfolio">
-                    <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(1).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(2).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(3).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(4).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-        </div>
-        <!-- Projects Row rkitchen-->
-        <div class="row">
-            <div class="col-md-3 img-portfolio">
-                    <%= link_to image_tag("rgallery/kitchens/rkitchen(1).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/kitchens/rkitchen(2).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/kitchens/rkitchen(3).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-            <div class="col-md-3 img-portfolio">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/kitchens/rkitchen(4).png",:class => 'img-responsive img-portfolio img-hover', :size => '750x450') %>
-                </a>
-            </div>
-        </div>
-              
-
-        </div>
-        <!-- /.row -->
-
+                <a data-slide-to="0"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(1).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-slide-to="1"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(2).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-slide-to="2"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(3).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-slide-to="3"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(4).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-slide-to="4"> <%= image_tag("rgallery/kitchens/rkitchen(1).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                <a data-slide-to="5"> <%= image_tag("rgallery/kitchens/rkitchen(2).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                <a data-slide-to="6"> <%= image_tag("rgallery/kitchens/rkitchen(3).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                <a data-slide-to="7"> <%= image_tag("rgallery/kitchens/rkitchen(4).png", :size=> '75x50', :class => 'img-hover') %> </a>
+        
         <!-- Related Projects Row -->
         <div class="row">
 
