--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -27,11 +27,10 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x600" alt="">
+                <%= image_tag("aboutssd.png", :class => 'img-responsive') %>
             </div>
             <div class="col-md-6">
                 <h2>About Solid Solutions Design</h2>
-                <p>Solid Solutions Design </p>
                 <p>
                 Solid Solutions Design LLC is a Clinical, Commercial, and Residential manufacturing company. 
                 Majority of the products are designed and manufactured at our facility located in Chamblee, Georgia.
