--- a/app/views/home/progress.html.erb
+++ b/app/views/home/progress.html.erb
@@ -6,14 +6,17 @@
 </head>
 
 <body>
-
-<h2>
+<h2 >
 <center>Sorry! This page is under construction.</center>
 </h2>
 
-<p><strong><center>If you need to place an order please email <a href="mailto:chris@ssdmfg.com">Chris@ssdmfg.com</a> or <a href="mailto:sean@ssdmfg.com">Sean@ssdmfg.com</a></center></strong></p>
+<p><strong><center>If you need to place an order please email <a href="mailto:chris@ssdmfg.com">Chris@ssdmfg.com</a> 
+or <a href="mailto:sean@ssdmfg.com">Sean@ssdmfg.com</a></center></strong></p>
+
 
 
 </body>
 
 </html>
+
+
