--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -26,8 +26,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("clgallery/Cheang DDS (5).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), gallery_clinical_path %>
+                    <%= link_to image_tag("clgallery/Cheang DDS (5).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), home_progress_path %>
                 </a>
             </div>
             <div class="col-md-5">
@@ -38,7 +37,7 @@
                     <li>Doctor Offices</li>
                 </ul>
                 <p>Most of the projects shown in this gallery are customer inquired. We manufacture most of the clinical office needs.</p>
-                <a class="btn btn-primary" <%= link_to "View Projects", gallery_clinical_path%> </a>
+                <a class="btn btn-primary" <%= link_to "View Projects", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
@@ -48,8 +47,7 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("cogallery/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), gallery_commercial_path %>
+                    <%= link_to image_tag("cogallery/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), home_progress_path %>
                 </a>
             </div>
             <div class="col-md-5">
@@ -62,7 +60,7 @@
                     <li>Retail Stores</li>
                 </ul>
                 <p>Some projects from this Gallery were customer inquired. The salons include both custom and stock furniture that we manufacture at our factory.</p>
-                <a class="btn btn-primary" <%= link_to "View Projects", gallery_commercial_path%> </a>
+                <a class="btn btn-primary" <%= link_to "View Projects", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
@@ -72,8 +70,7 @@
         <!-- Project Three -->
         <div class="row">
             <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <%= link_to image_tag("rgallery/Ulhmann_kitchen(3).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), gallery_residential_path %>
+                    <%= link_to image_tag("rgallery/Ulhmann_kitchen(3).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), home_progress_path %>
                 </a>
             </div>
             <div class="col-md-5">
@@ -86,7 +83,7 @@
                     <li>Closet Fixtures</li>
                 </ul>
                 <p>While we manufacture the shelving, the majority of the residential work comes from Joshua Cabinetry. </p>
-                <a class="btn btn-primary" <%= link_to "View Projects", gallery_residential_path%> </a>
+                <a class="btn btn-primary" <%= link_to "View Projects", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
@@ -94,8 +91,6 @@
         <hr>
         <!-- /.row -->
 
-
-        <hr>
 
         
     </div>
