directed gallery relations to progress page

--- a/app/views/gallery/clinical.html.erb
+++ b/app/views/gallery/clinical.html.erb
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Yelisetty</h3>
+                <h3>Dental Offices</h3>
                 <h4></h4>
                 <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
@@ -50,7 +50,7 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Cheang DDS</h3>
+                <h3>Doctor Offices</h3>
                 <h4></h4>
                 <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
