--- a/app/views/gallery/commercial.html.erb
+++ b/app/views/gallery/commercial.html.erb
@@ -35,7 +35,7 @@
                 <h3>Mall Kiosks</h3>
                 <h4></h4>
                 <p></p>
-                <a class="btn btn-primary" <%= link_to "View Project", gallery_mallkiosks_path%></i></a>
+                <a class="btn btn-primary" <%= link_to "View Project", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
@@ -53,7 +53,7 @@
                 <h3>Restaurants</h3>
                 <h4></h4>
                 <p></p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+                <a class="btn btn-primary" <%= link_to "View Project", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
@@ -68,10 +68,10 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Retail Stores</h3>
+                <h3>Retail Businesses</h3>
                 <h4></h4>
                 <p></p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+                <a class="btn btn-primary" <%= link_to "View Project", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
@@ -88,7 +88,7 @@
                 <h3>Salons</h3>
                 <h4></h4>
                 <p></p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
+                <a class="btn btn-primary" <%= link_to "View Project", home_progress_path%> </a>
             </div>
         </div>
         <!-- /.row -->
