--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -79,9 +79,9 @@
                         <h4><i class="fa fa-fw fa-check"></i><center> Commercial </center></h4>
                     </div>
                     <div class="panel-body">
-                        <%= link_to image_tag("cogallery/ATLBraves1.png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
+                        <%= link_to image_tag("cogallery/ATLBraves1.png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450'), home_progress_path %>
                         <p>We have Designed and Manufactured a variety of designs and styles for many commercial sites including restaurants, retails stores, offices, and nail salons.</p>
-                        <center><a class="btn btn-default" <%= link_to "Take a Look!", gallery_commercial_path%> </a></center>
+                        <center><a class="btn btn-default" <%= link_to "Take a Look!", home_progress_path%> </a></center>
                     </div>
                 </div>
             </div>
@@ -91,9 +91,9 @@
                         <h4><i class="fa fa-fw fa-gift"></i><center> Residential </center></h4>
                     </div>
                     <div class="panel-body">
-                        <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
+                        <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450'), home_progress_path %>
                         <p>While we primarily specialize in Clinical and Commercial fixtures, we do design and manufacture together alongside Joshua Cabinetry for residential designs.</p>
-                        <center><a class="btn btn-default" <%= link_to "Take a Look!", gallery_residential_path%> </a></center>
+                        <center><a class="btn btn-default" <%= link_to "Take a Look!", home_progress_path%> </a></center>
                     </div>
                 </div>
             </div>
@@ -103,9 +103,9 @@
                         <h4><i class="fa fa-fw fa-compass"></i><center> Clinical </center></h4>
                     </div>
                     <div class="panel-body">
-                        <%= link_to image_tag("clgallery/Clinical (1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
+                        <%= link_to image_tag("clgallery/Clinical (1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450'), home_progress_path %>
                         <p>Our clinical designs follow that of a basic dentist or doctor's office. While we do keep some of our designs basic, we also like to get creative in our designs!</p>
-                        <center><a class="btn btn-default" <%= link_to "Take a Look!", gallery_clinical_path%> </a></center>
+                        <center><a class="btn btn-default" <%= link_to "Take a Look!", home_progress_path%> </a></center>
                     </div>
                 </div>
             </div>
