added ssd logo and adjusted navbar

--- a/app/views/gallery/kitchens.html.erb
+++ b/app/views/gallery/kitchens.html.erb
@@ -87,15 +87,16 @@
                 
                 
                 <!-- Projects Row Ulhmann-->
-                <a data-slide-to="0"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(1).png", :size=> '75x50', :class => 'img-hover')%> </a>
-                <a data-slide-to="1"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(2).png", :size=> '75x50', :class => 'img-hover')%> </a>
-                <a data-slide-to="2"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(3).png", :size=> '75x50', :class => 'img-hover')%> </a>
-                <a data-slide-to="3"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(4).png", :size=> '75x50', :class => 'img-hover')%> </a>
-                <a data-slide-to="4"> <%= image_tag("rgallery/kitchens/rkitchen(1).png", :size=> '75x50', :class => 'img-hover') %> </a>
-                <a data-slide-to="5"> <%= image_tag("rgallery/kitchens/rkitchen(2).png", :size=> '75x50', :class => 'img-hover') %> </a>
-                <a data-slide-to="6"> <%= image_tag("rgallery/kitchens/rkitchen(3).png", :size=> '75x50', :class => 'img-hover') %> </a>
-                <a data-slide-to="7"> <%= image_tag("rgallery/kitchens/rkitchen(4).png", :size=> '75x50', :class => 'img-hover') %> </a>
-        
+                <a data-target="#carousel-example-generic", data-slide-to="0"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(1).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="1"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(2).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="2"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(3).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="3"> <%= image_tag("rgallery/kitchens/Ulhmann_kitchen750x500(4).png", :size=> '75x50', :class => 'img-hover')%> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="4"> <%= image_tag("rgallery/kitchens/rkitchen(1).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="5"> <%= image_tag("rgallery/kitchens/rkitchen(2).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="6"> <%= image_tag("rgallery/kitchens/rkitchen(3).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                <a data-target="#carousel-example-generic", data-slide-to="7"> <%= image_tag("rgallery/kitchens/rkitchen(4).png", :size=> '75x50', :class => 'img-hover') %> </a>
+                
+
         <!-- Related Projects Row -->
         <div class="row">
 
