--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -47,7 +47,7 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-7">
-                    <%= link_to image_tag("cogallery/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), home_progress_path %>
+                    <%= link_to image_tag("cogallery/kiosks/mallkiosk(1).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x300'), home_progress_path %>
                 </a>
             </div>
             <div class="col-md-5">
