--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -141,7 +141,7 @@
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
-                    <p><strong>Interested in our Services or Products? Have an inquiry or requesting a quote? Just click this button to get to our contact page!</strong></p>
+                    <p><strong>Interested in our Services or Products? Have an inquiry or requesting a quote?</strong></p>
                 </div>
                 <div class="col-md-4">
                     <a class="btn btn-lg btn-default btn-block" <%= link_to "Contact Us!", home_contact_path %></a>
