--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,26 +14,34 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left">
                     <li>
-                        <%= link_to image_tag("ssdLogo1.png", :class => 'img-responsive', :size => '75x75'), root_path %>
-                        
+                        <%= link_to image_tag("ssdLogo1.png", :class => 'img-responsive', :size => '60x60'), root_path %>
                     </li>
-                <b>
+                    <li>
+                        <%= link_to image_tag("instagram.png", :class => 'img-responsive', :size => '50x50'), 'https://www.instagram.com/ssdmfg/', target: '_blank' %>
+                    </li>
+                    <li>
+                        <%= link_to image_tag("facebook.png", :class => 'img-responsive', :size => '50x50'), 'https://www.facebook.com/ssdmfg/', target: '_blank' %>
+                    </li>
+                
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <%# <div>Icons made by <a href="http://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> %>
+                <b>
+                <br>
+                <ul class="nav navbar-nav navbar-right nav-font">
                     <li>
-                        <br><%= link_to "About", home_about_path %>
+                        <%= link_to "About", home_about_path %>
                     </li>
                     <li>
-                        <br><%= link_to "Services", home_services_path %>
+                        <%= link_to "Services", home_services_path %>
                     </li>
                     <li>
-                        <br><%= link_to "Products", home_progress_path %>
+                        <%= link_to "Products", home_progress_path %>
                     </li>
                     <li>
-                        <br><%= link_to "Gallery", home_gallery_path %>
+                        <%= link_to "Gallery", home_gallery_path %>
                     </li>
                     <li> 
-                        <br><%= link_to "Contact", home_contact_path %>
+                        <%= link_to "Contact", home_contact_path %>
                     </li>
                 </ul>
                 </b>
